# riverrater

./: .gitignore  INTERFACES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/training/: README.md  cards.yaml
docs/: BUILD_PLAN.md  FEATURE_PLAN.md
models/yolov8n_cards/: README.md
scripts/: augment_cards.py  download_roboflow.py  profile_tick.py  train_yolo.py
src/riverrater/: config.py  main.py
src/riverrater/capture/: __init__.py  screen.py
src/riverrater/game/: __init__.py  blackjack_math.py  poker_math.py  state.py
src/riverrater/hud/: __init__.py  blackjack_view.py  calibration_overlay.py  manual_input.py  overlay.py  poker_input.py  poker_view.py  settings_dialog.py
src/riverrater/training/: __init__.py  augmentation.py  labels.py  paths.py  roboflow.py  yolo_train.py
src/riverrater/utils/: __init__.py  hotkeys.py  logging.py  session_log.py
src/riverrater/vision/: __init__.py  calibration.py  card_tracker.py  pot_ocr.py  template_engine.py  yolo_engine.py
tests/: conftest.py  test_augmentation.py  test_blackjack_math.py  test_calibration.py  test_calibration_overlay.py  test_card_tracker.py  test_detection_meta.py  test_game_controller.py  test_opponent_count.py  test_poker_input.py  test_poker_math.py  test_poker_view_confidence.py  test_pot_ocr.py  test_session_log.py  test_settings_dialog.py  test_template_engine.py  test_yolo_smoke.py
